--- a/index.html
+++ b/index.html
@@ -65,16 +65,7 @@
                 <img src="./img/profile.png" alt="">
                 <div class="about-text d-flex flex-column justify-content-center">
                     <h2>About Me</h2>
-                    <p>My name is Gibran Hakim, an informatics engineering student at university of
-                        Brawijaya. I'm currently in my fifth semester pursuing a degree in Informatics Engineering. I am
-                        deeply passionate about
-                        technology, with particularly focus on data science and web development. My expertise extends to
-                        UI/UX design, where I
-                        excel in creating interfaces that prioritize user convenience. Alongside these skills, I also
-                        have interest in the field
-                        of cybersecurity. My diverse skill set reflects my commitment to exploring the intersection of
-                        technology and
-                        user-centered design, emphasizing secure solutions rooted in data-driven approaches. </p>
+                    <p>My name is Gibran Hakim, an informatics engineering student at university of Brawijaya. I am deeply passionate about technology, with particularly focus on data science and web development. My expertise extends to UI/UX design, where I excel in creating interfaces that prioritize user convenience. Alongside these skills, I also have interest in the field of cybersecurity. My diverse skill set reflects my commitment to exploring the intersection of technology and user-centered design, emphasizing secure solutions rooted in data-driven approaches. </p>
                     <a class="btn" href="#contacts">Contact Me</a>
                 </div>
             </div>
