--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                             and creatively. With a collection of various food recipes and step-by-step guides, this
                             application aims to help and
                             make it easier for users in the world of cooking.</p>
-                        <a class="btn" href="https://eszw10.github.io/SurveyForm/" target="_blank">View Project</a>
+                        <a class="btn" href="https://github.com/gevabriel/flavoryapp" target="_blank">View Project</a>
                     </div>
                 </div>
             </div>
